--- a/Silver/Silver.csproj
+++ b/Silver/Silver.csproj
@@ -45,6 +45,28 @@
   <PropertyGroup>
     <ApplicationIcon>Resources/favicon.ico</ApplicationIcon>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
+    <DebugSymbols>true</DebugSymbols>
+    <OutputPath>bin\x64\Debug\</OutputPath>
+    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DebugType>full</DebugType>
+    <PlatformTarget>x64</PlatformTarget>
+    <LangVersion>7.1</LangVersion>
+    <ErrorReport>prompt</ErrorReport>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+    <Prefer32Bit>true</Prefer32Bit>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
+    <OutputPath>bin\x64\Release\</OutputPath>
+    <DefineConstants>TRACE</DefineConstants>
+    <Optimize>true</Optimize>
+    <DebugType>pdbonly</DebugType>
+    <PlatformTarget>x64</PlatformTarget>
+    <LangVersion>7.1</LangVersion>
+    <ErrorReport>prompt</ErrorReport>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+    <Prefer32Bit>true</Prefer32Bit>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="Costura, Version=3.3.3.0, Culture=neutral, PublicKeyToken=9919ef960d84173d, processorArchitecture=MSIL">
       <HintPath>..\packages\Costura.Fody.3.3.3\lib\net40\Costura.dll</HintPath>
@@ -62,7 +84,7 @@
       <HintPath>..\packages\JayFleischer.OpenTkControl.1.0.1\lib\net45\OpenTkControl.dll</HintPath>
     </Reference>
     <Reference Include="PakReader">
-      <HintPath>J:\Code\Visual Studio 2017\Projects\PakReader\lib\netstandard2.0\PakReader.dll</HintPath>
+      <HintPath>..\..\PakReader\lib\netstandard2.0\PakReader.dll</HintPath>
     </Reference>
     <Reference Include="SkiaSharp, Version=1.68.0.0, Culture=neutral, PublicKeyToken=0738eb9f132ed756, processorArchitecture=MSIL">
       <HintPath>..\packages\SkiaSharp.1.68.0\lib\net45\SkiaSharp.dll</HintPath>
@@ -89,10 +111,19 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="LoadingProgress.xaml.cs">
+      <DependentUpon>LoadingProgress.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Startup.xaml.cs">
       <DependentUpon>Startup.xaml</DependentUpon>
     </Compile>
+    <Compile Include="SyntaxLexers\IniParser.cs" />
+    <Compile Include="SyntaxLexers\JsonParser.cs" />
     <Page Include="FileViewer.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="LoadingProgress.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -167,13 +198,13 @@
     <Resource Include="Resources\folder.ico" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\AurelienRibon.Ui.SyntaxHighlightBox\AurelienRibon.Ui.SyntaxHighlightBox.csproj">
-      <Project>{10A9ECD3-AE1E-494D-9A27-8A32DD581759}</Project>
-      <Name>AurelienRibon.Ui.SyntaxHighlightBox</Name>
-    </ProjectReference>
     <ProjectReference Include="..\ModelViewer\Silver.ModelViewer.csproj">
       <Project>{db571f4c-6058-4ca4-a93c-84b13a21f662}</Project>
       <Name>Silver.ModelViewer</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\SyntaxHighlighter\SyntaxHighlighter.csproj">
+      <Project>{10a9ecd3-ae1e-494d-9a27-8a32dd581759}</Project>
+      <Name>SyntaxHighlighter</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
@@ -193,6 +224,11 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Resources\opengl.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="oo2core_5_win64.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
